v9.0.0/_sources/generated/pcdsdevices.timetool.Timetool.rst.txt
pcdsdevices.timetool.Timetool
=============================

.. currentmodule:: pcdsdevices.timetool

.. autoclass:: Timetool

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - state
          - :class:`~ophyd.signal.EpicsSignal`
          - 
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.inout.CombinedInOutRecordPositioner`
    
        * - x_motor
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:X:MOTOR``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.inout.CombinedInOutRecordPositioner`
    
        * - y_motor
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:Y:MOTOR``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.inout.CombinedInOutRecordPositioner`
    
        * - detector (FCpt)
          - :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetector`
          - ``{self._prefix_det}``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: check_inserted
    .. automethod:: check_removed
    .. automethod:: check_transmission
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: get_state
    .. automethod:: insert
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: remove
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: set_defaults
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: in_states
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: needs_parent
    .. autoattribute:: out_states
    .. autoattribute:: position
    .. autoattribute:: settle_time
    .. autoattribute:: stage_group
    .. autoattribute:: states_list
    .. autoattribute:: stop
    .. autoattribute:: subscriptions
    .. autoattribute:: timeout
    .. autoattribute:: transmission
    
    